--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 <div id="launching-shiny-phyloseq-local-session" class="section level2">
 <h2>Launching Shiny-phyloseq Local Session</h2>
-<p>You’ve been added. In the end, we will host the server “backend” somewhere so that users only need to point their web browser to a link. We will also release the source code, in case you want or need to run it locally. This latter option is what you’ll be testing. The server backend will be an R session on your own machine.</p>
+<p>While it is possible to host the server “back end” somewhere so that users only need to point their web browser to a link, the following instructions apply to running both the back and front “ends” on your local machine. The server back end will be an R session on your own machine, while the front end is your web browser, pointed to the appropriate local URL.</p>
 <p>See the “<a href="http://shiny.rstudio.com/tutorial/lesson1/">Running an App</a>” section of <a href="http://shiny.rstudio.com/tutorial">the Shiny Tutorials</a>.</p>
 <p>If you are using RStudio (recommended) you can launch Shiny-phyloseq with the click of a button after opening one of the main source files (e.g. <code>server.R</code>) in the Shiny-phyloseq directory. Note that the best behavior (uploads, downloads, etc.) comes from <strong>not-using the RStudio built-in browser</strong>, but instead clicking the “open in browser” button at the top.</p>
 <p>Your default browser will then open at the live (local) URL. Then click away!</p>
