Update web links in README

--- a/README.html
+++ b/README.html
@@ -55,7 +55,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <div id="shiny-phyloseq" class="section level1">
 <h1>Shiny-phyloseq</h1>
-<p><a href="https://github.com/joey711/shiny-phyloseq">Shiny-phyloseq</a> is an interactive web application that provides a graphical user interface to the microbiome analysis package for R, called <a href="http://joey711.github.io/phyloseq/">phyloseq</a>. For details about using the phyloseq package directly, see <a href="http://joey711.github.io/phyloseq/">The phyloseq Homepage</a>.</p>
+<p><a href="http://joey711.github.io/shiny-phyloseq/">Shiny-phyloseq</a> is an interactive web application that provides a graphical user interface to the microbiome analysis package for R, called <a href="http://joey711.github.io/phyloseq/">phyloseq</a>. For details about using the phyloseq package directly, see <a href="http://joey711.github.io/phyloseq/">The phyloseq Homepage</a>.</p>
 <div id="citation" class="section level2">
 <h2>Citation</h2>
 <p>Shiny-phyloseq is provided under a free-of-charge, open-source license (A-GPL3). All we require is that you cite/attribute the following in any work that benefits from this code or application.</p>
@@ -64,7 +64,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 <div id="installation" class="section level2">
 <h2>Installation</h2>
-<p>See the <a href="www/Install.html">Shiny-phyloseq installation instructions</a>, which are provided within the Shiny-phyloseq package.</p>
+<p>See the <a href="http://joey711.github.io/shiny-phyloseq/Install.html">Shiny-phyloseq installation instructions</a>, which are provided within the Shiny-phyloseq package.</p>
 </div>
 <div id="launching-shiny-phyloseq-local-session" class="section level2">
 <h2>Launching Shiny-phyloseq Local Session</h2>
