--- a/README.html
+++ b/README.html
@@ -70,28 +70,14 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 <div id="launching-shiny-phyloseq-local-session" class="section level2">
 <h2>Launching Shiny-phyloseq Local Session</h2>
-<p>While it is possible to host the server “back end” somewhere so that users only need to point their web browser to a link, the following instructions apply to running both the back and front “ends” on your local machine. The server back end will be an R session on your own machine, while the front end is your web browser, pointed to the appropriate local URL.</p>
-<div id="auto-installlaunch-shiny-phyloseq-recommended" class="section level3">
-<h3>Auto-Install/Launch Shiny-phyloseq (Recommended)</h3>
-<p>Simply launching Shiny-phyloseq should also install missing/old packages.</p>
+<p>While it is possible to host the server “back end” somewhere so that users only need to point their web browser to a link, it is also possible to launch both the back and front “ends” on your local machine. The server back end will be an R session on your own machine, while the front end is your web browser, pointed to the appropriate local URL.</p>
+<div id="quick-installlaunch-instructions" class="section level3">
+<h3><a href="http://joey711.github.io/shiny-phyloseq/Install.html">Quick install/launch instructions</a></h3>
+<p>Simply <a href="http://joey711.github.io/shiny-phyloseq/Install.html">launching Shiny-phyloseq</a> should also install missing/old packages. Make sure that you first have installed <a href="http://cran.r-project.org/">the latest version of R</a>.</p>
 <p>The following R code will launch Shiny-phyloseq on most systems.</p>
-<pre class="r"><code>install.packages(&quot;shiny&quot;)
+<pre class="r"><code>install.packages(&quot;shiny&quot;) 
 shiny::runGitHub(&quot;shiny-phyloseq&quot;,&quot;joey711&quot;)</code></pre>
 <p>See the <a href="http://joey711.github.io/shiny-phyloseq/Install.html">Shiny-phyloseq installation instructions</a>, for further details.</p>
-</div>
-<div id="launch-using-rstudios-ide" class="section level3">
-<h3>Launch using RStudio’s IDE</h3>
-<p>Alternatively, you can launch a Shiny app from within RStudio. This is not necessary if you launch the app using the R code above.</p>
-<p>See the “<a href="http://shiny.rstudio.com/tutorial/lesson1/">Running an App</a>” section of <a href="http://shiny.rstudio.com/tutorial">the Shiny Tutorials</a>.</p>
-<p>If you are using RStudio (recommended) you can launch Shiny-phyloseq with the click of a button after opening one of the main source files (e.g. <code>server.R</code>) in the Shiny-phyloseq directory. Note that the best behavior (uploads, downloads, etc.) comes from <strong>not-using the RStudio built-in browser</strong>, but instead clicking the “open in browser” button at the top.</p>
-<p>Your default browser will then open at the live (local) URL. Then click away!</p>
-<p>Brief steps:</p>
-<ol style="list-style-type: decimal">
-<li>(Re)start RStudio by opening <code>server.R</code> or <code>ui.R</code></li>
-<li>Click the “Run App” button that appears.</li>
-<li>Click the “Open in Browser” button above the new RStudio window that just launched.</li>
-</ol>
-<p>Note that any R installation/session can launch a Shiny app. For alternative launch methods that don’t use RStudio, see “<a href="http://shiny.rstudio.com/tutorial/lesson1/">Running an App</a>”.</p>
 </div>
 </div>
 </div>
