fix footer/section typo in main page

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ shiny::runGitHub(&quot;shiny-phyloseq&quot;,&quot;joey711&quot;)</code></pre>
 <p>See the <a href="Install.html">Shiny-phyloseq installation page</a>
 for further details regarding installation, and required packages.</p>
 
+</section>
+
 <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
