--- a/panels/paneldoc/ordination.html
+++ b/panels/paneldoc/ordination.html
@@ -67,12 +67,17 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li><strong>Method</strong> - The Ordination Method to use. This is an interface to phyloseq’s <a href="http://joey711.github.io/phyloseq/ordinate">ordinate function</a>.</li>
 <li><strong>Distance</strong> - The distance method. This is a direct interface to phyloseq’s <a href="http://joey711.github.io/phyloseq/distance">distance function</a>.</li>
 <li><strong>Display</strong> - The ordination display type. This is equivalent to the <code>type</code> argument in the <a href="http://joey711.github.io/phyloseq/plot_ordination-examples.html">plot_ordination function</a>.</li>
-<li><strong>Constraint</strong> - The variables to include for constrained ordination. Multiple non-<code>NULL</code> variables are combined in a formula. e.g. <code>~ Var1 + Var2 + Var3</code>. Not that for ordination constraints only the right-hand side is relevant. Generally speaking, this is less flexible than a full <a href>formula interface</a>. For conditioning variables, explicit interaction terms, and other features of R formulae, please use phyloseq/R directly.</li>
+<li><strong>Constraint</strong> - The variables to include for constrained ordination. Multiple non-<code>NULL</code> variables are combined in a formula. e.g. <code>~ Var1 + Var2 + Var3</code>. Not that for ordination constraints only the right-hand side is relevant. Generally speaking, this is less flexible than a full <a href="http://cran.r-project.org/doc/manuals/r-release/R-intro.html#Formulae-for-statistical-models">formula interface</a>. For conditioning variables, explicit interaction terms, and other features of R formulae, please use phyloseq/R directly.</li>
 </ul>
 </div>
 <div id="aesthetic-mapping" class="section level3">
 <h3>Aesthetic Mapping</h3>
-<p>These widgets correspond to aesthetic mappings on nodes. <code>Color</code> and <code>Shape</code> are the same as in other panels. For instance, <code>Color</code> maps point-color to a particular variable.</p>
+<ul>
+<li><strong>Color</strong> - The variable selected here is mapped to point color.</li>
+<li><strong>Shape</strong> - The variable selected here is mapped to point shape.</li>
+<li><strong>Facet Row</strong> - This is an interface to <a href="http://docs.ggplot2.org/0.9.3.1/facet_grid.html">ggplot2’s facet_grid function</a>. Faceting is a means of splitting the data into separate panels according to one or more variables in the data. This can have many advantages, especially to alleviate overplotting, and to clarify key comparisons. In this case, the <code>Facet Row</code> widget provides available variables that will be mapped to panel-rows in the resulting grid of facets panels. You can select more than one variable. You should delete/unselect NULL when selecting facets.</li>
+<li><strong>Facet Col</strong> - This is the same as <code>Facet Row</code> above, but this widget controls the variables that will arrange the data into panel columns.</li>
+</ul>
 </div>
 <div id="details" class="section level3">
 <h3>Details</h3>
