Ordination label option added. UI/doc updates, too
https://github.com/joey711/shiny-phyloseq/issues/43

--- a/panels/paneldoc/network.html
+++ b/panels/paneldoc/network.html
@@ -72,7 +72,12 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 <div id="aesthetic-mapping" class="section level3">
 <h3>Aesthetic Mapping</h3>
-<p>These widgets correspond to aesthetic mappings on nodes. <code>Color</code> and <code>Shape</code> are the same as in other panels. <code>Label</code> allows labeling of nodes with text, according to one or more selected variables. If multiple non-<code>NULL</code> variables selected, their values are concatenated together in order as a single label for each node. The size and horisontal justification of labels can be adjusted in the <code>Details</code> section below.</p>
+<p>These widgets correspond to aesthetic mappings on nodes (points).</p>
+<ul>
+<li><strong>Color</strong> - The variable selected here is mapped to point/node color.</li>
+<li><strong>Shape</strong> - The variable selected here is mapped to point/node shape.</li>
+<li><strong>Label</strong> - allows labeling of nodes with text, according to one or more selected variables. If multiple non-<code>NULL</code> variables selected, their values are concatenated together in order as a single label for each node. The size and horisontal justification of labels can be adjusted in the <code>Details</code> section below.</li>
+</ul>
 </div>
 <div id="details" class="section level3">
 <h3>Details</h3>
@@ -84,7 +89,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 <div id="dimensions-and-downloads" class="section level3">
 <h3>Dimensions and Downloads</h3>
-<p>Figure dimensions, file format, and download button (<code>DL</code>).</p>
+<p>Figure dimensions (inches), file format, and download button (<code>DL</code>).</p>
 </div>
 </div>
 
