--- a/panels/paneldoc/ordination.html
+++ b/panels/paneldoc/ordination.html
@@ -77,11 +77,12 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li><strong>Shape</strong> - The variable selected here is mapped to point shape.</li>
 <li><strong>Facet Row</strong> - This is an interface to <a href="http://docs.ggplot2.org/0.9.3.1/facet_grid.html">ggplot2’s facet_grid function</a>. Faceting is a means of splitting the data into separate panels according to one or more variables in the data. This can have many advantages, especially to alleviate overplotting, and to clarify key comparisons. In this case, the <code>Facet Row</code> widget provides available variables that will be mapped to panel-rows in the resulting grid of facets panels. You can select more than one variable. You should delete/unselect NULL when selecting facets.</li>
 <li><strong>Facet Col</strong> - This is the same as <code>Facet Row</code> above, but this widget controls the variables that will arrange the data into panel columns.</li>
+<li><strong>Label</strong> - A variable to map to point label. The text at each point will reflect the value of the chosen variable. The small numeric widgets to the right adjust label size (<code>Lab Sz</code>) and vertical justification (<code>V-Just</code>).</li>
 </ul>
 </div>
 <div id="details" class="section level3">
 <h3>Details</h3>
-<p><code>Palette</code>, <code>Theme</code>, <code>Size</code>, and <code>Opacity</code> - refer to the way points are drawn.</p>
+<p><code>Palette</code>, <code>Size</code>, and <code>Opacity</code> - refer to the way points are drawn.</p>
 <ul>
 <li><strong>Palette</strong> - Refers to color palette. Only applicable if you have selected a <code>Color</code> variable in the Aesthetic Mapping section. Explore the <code>Palette</code> panel within Shiny-phyloseq, or more details about color palettes at <a href="http://colorbrewer2.org/">ColorBrewer</a>.</li>
 <li><strong>Theme</strong> - For the most part these refer to <a href="http://docs.ggplot2.org/0.9.2.1/theme.html">ggplot2 themes</a>, which generally encompass stylistic graphical features, such as axis line types, axis label fonts and spacing, background color, etc.</li>
